test/MC/SVE/regression-tests/negative_tests/sve-stnt1h-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU16CStoreNT2LSSZ
// Offset register Rm cannot be xzr
stnt1h z21.h, p6, [x12, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
